tests/NormalTests/paczka1/fuzzy1/52119892.err
Error in line 1: UOZt A555 29,3
Error in line 8: S69 A555 52,2
Error in line 24: Kq8 S69 23,9
Error in line 3: UOZt S69 65,0
Error in line 17: ozGszv A555 64,1
Error in line 16: plfLVYMw S69 84,2
